loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:8: error: '(' expected but identifier found.
   if Cookies <= 2 {
      ^Poucet1:14: error: illegal start of simple expression
  }
  ^